# fromzero2ai-website

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  launch.sh  launch_app.sh  lintconfig.toml  pyproject.toml  setup.cfg
docker/: Dockerfile.api  Dockerfile.streamlit_app
fromzero2ai/: __init__.py
fromzero2ai/api_engine/: __init__.py  main.py  settings.py
fromzero2ai/api_engine/errors/: __init__.py  base.py  handlers.py
fromzero2ai/api_engine/routes/: __init__.py  addition_route.py  example_route.py  health_status.py  math_route.py
fromzero2ai/app_engine/: __init__.py  demo_app.py
fromzero2ai/math_engine/: __init__.py  addition.py  multiplication.py
