[tool.poetry]
name = "fromzero2ai"
version = "0.0.1"
description = "Workspace for research & development"
authors = ["Wassim Abida <wassim.abida14@gmail.com>"]

[[tool.poetry.source]]
name = "public"
url = "https://pypi.org/simple/"
secondary = false
default = true

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
jsonpath-ng = "^1.4.3"
requests = "^2.28.1"
fire = "^0.4.0"
pandas = "1.4.4"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"
#torch = "^1.13.1"
#torchvision = "^0.14.1"
#lightning = "^2022.10.25"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
python-dotenv = "^1.0.0"
streamlit = "^1.21.0"
watchdog = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
jupyterlab = "^3.5.2"
plotly = "^5.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
